[add]: gateway api methods
